--- a/localizer/CMakeLists.txt
+++ b/localizer/CMakeLists.txt
@@ -35,12 +35,10 @@ include_directories(${PROJECT_SOURCE_DIR} /SSprune/src)
 include(${CGAL_USE_FILE})
 include(CGAL_CreateSingleSourceCGALProgram)
 
-add_library(6DLocalizator  ${headers} ${sources} )
+#add_library(6DLocalizator  ${headers} ${sources} )
 
 add_executable(${PROJECTNAME} ${headers} ${sources})
-target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} ctrlLib)
 target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} ctrlLib iKin icubmod)
-target_link_libraries(${PROJECTNAME}  6DLocalizator)
-#add_library(6DLocalizator  ${headers} ${sources} target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} ctrlLib))
+#target_link_libraries(${PROJECTNAME}  6DLocalizator)
 install(TARGETS ${PROJECTNAME} DESTINATION bin)
 icubcontrib_add_uninstall_target()
