--- a/configurationFiles/configRobot_exp.ini
+++ b/configurationFiles/configRobot_exp.ini
@@ -2,14 +2,14 @@ modelFile           ../../models/robot.off
 measurementsFile    ../../measurements/measRobot_exp.off
 outputFile          ../../outputs/output.off
 outputFile2          ../../outputs/output_data.off
-M                   3
+M                   2
 numMeas             30
 errp                0.005
 errn                0.01
-delta_desired_p     0.008
-delta_desired_n     0.08
-radius0             (0.1, 0.1, 0.1)
-center0             (-0.35, 0.2, 0.2)
+delta_desired_p     0.0000008
+delta_desired_n     0.000008
+radius0             (0.15, 0.15, 0.15)
+center0             (-0.35, 0.0, 0.0)
 N                   1200
 n                   6
 Q                   (0.000008,0.000008, 0.000008, 0.0008, 0.0008, 0.0008)
