--- a/configurationFiles/configCleaner_sim.ini
+++ b/configurationFiles/configCleaner_sim.ini
@@ -2,14 +2,14 @@ modelFile           ../../models/cleaner.off
 measurementsFile    ../../measurements/measCleaner_sim.off
 outputFile          ../../outputs/output.off
 outputFile2          ../../outputs/output_data.off
-M                   3
+M                   2
 numMeas             30
 errp                0.005
 errn                0.01
-delta_desired_p     0.008
-delta_desired_n     0.08
-radius0             (0.1, 0.1, 0.1)
-center0             (-0.35, 0.2, 0.2)
+delta_desired_p     0.00000008
+delta_desired_n     0.0000008
+radius0             (0.4, 0.4, 0.4)
+center0             (-0.0, 0.0, 0.0)
 N                   700
 n                   6
 Q                   (0.0001,0.0001, 0.0001, 0.01, 0.01, 0.01)
