--- a/configurationFiles/configCleaner_sim.ini
+++ b/configurationFiles/configCleaner_sim.ini
@@ -1,22 +1,20 @@
-modelFile           ../../models/cleaner.off
-measurementsFile    ../../measurements/measCleaner_sim.off
-outputFile          ../../outputs/output.off
-outputFile2          ../../outputs/output_data.off
-M                   2
-numMeas             30
-errp                0.005
-errn                0.01
-delta_desired_p     0.00000008
-delta_desired_n     0.0000008
-radius0             (0.4, 0.4, 0.4)
-center0             (-0.0, 0.0, 0.0)
-N                   700
-n                   6
-Q                   (0.0001,0.0001, 0.0001, 0.01, 0.01, 0.01)
-R                   (0.0001, 0.0001, 0.0001)
-P0                  (0.04, 0.04, 0.04, 9.86, 2.46, 9,86)
-alpha               1
-kappa               2
-beta                30
-window_width        35
-
+modelFile            ../../models/cleaner.off
+measurementsFile     ../../measurements/measCleaner_sim.off
+modelOutputPath      ../../outputs/cleaner/
+trialsOutputPath     ../../outputs/cleaner/
+radius0              (0.4, 0.4, 0.4)
+center0              (-0.0, 0.0, 0.0)
+N                    700
+n                    6
+Q                    (0.0001,0.0001, 0.0001, 0.01, 0.01, 0.01)
+R                    0.0001
+P0                   (0.04, 0.04, 0.04, 9.86, 2.46, 9.86)
+alpha                1
+kappa                2
+beta                 30
+memoryWidth	     36
+resampleInFirstIters false
+useIdealMeasEqn	     false
+numTrials	     1
+numContacts	     1
+realPose	     (0.00975779,-0.0124827,0.190133,5.28644,-0.00204084,1.00925)
