take into account the position of the observer when evaluating the point cloud

--- a/configurationFiles/configMustard_sim_motion.ini
+++ b/configurationFiles/configMustard_sim_motion.ini
@@ -10,6 +10,7 @@ N                    200
 n                    6
 R                    0.0001
 P0                   (0.04, 0.04, 0.04, 9.86, 2.46, 9.86)
+observerOrigin	     (0.3, -0.2, 0.2)
 alpha                1.0
 kappa                0
 beta                 2
