change configuration file of mustard scenario

--- a/configurationFiles/configMustard_sim_motion.ini
+++ b/configurationFiles/configMustard_sim_motion.ini
@@ -3,7 +3,7 @@ auxCloud1File	     ../../models/push_contacts_1.off
 auxCloud2File	     ../../models/push_contacts_2.off
 modelOutputPath      ../../outputs/mustard/motion/
 measOutputPath       ../../outputs/mustard/motion/
-resultsOutputPath    ../../outputs/mustard/
+resultsOutputPath    ../../outputs/mustard/motion/
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    200
@@ -18,3 +18,4 @@ memoryWidth	     1
 resampleInFirstIters true
 useIdealMeasEqn	     false
 numContacts	     10
+useCenterVelocity    false
