update Mustard localization scenario

--- a/configurationFiles/configMustard_sim_motion.ini
+++ b/configurationFiles/configMustard_sim_motion.ini
@@ -1,6 +1,6 @@
 modelFile            ../../models/mustard.off
-auxCloud1File	     ../../models/push_contacts_1.off
-auxCloud2File	     ../../models/push_contacts_2.off
+auxCloud1File	     ../../models/push_contacts_1_mustard.off
+auxCloud2File	     ../../models/push_contacts_2_mustard.off
 modelOutputPath      ../../outputs/mustard/motion/
 measOutputPath       ../../outputs/mustard/motion/
 resultsOutputPath    ../../outputs/mustard/motion/
@@ -9,12 +9,11 @@ center0              (-0.0, 0.0, 0.0)
 N                    200
 n                    6
 R                    0.0001
-P0                   (0.04, 0.04, 0.04, 9.86, 2.46, 9.86)
-observerOrigin	     (0.3, -0.2, 0.2)
+P0                   (0.04, 0.04, 0.04, 9.86, 9.86, 9.86)
+observerOrigin	     (0.2, -0.05, 0.0)
 alpha                1.0
 kappa                0
 beta                 2
-memoryWidth	     1
 resampleInFirstIters true
 useIdealMeasEqn	     false
 numContacts	     10
