change configuration file of mustard scenario

--- a/configurationFiles/configMustard_sim_motion.ini
+++ b/configurationFiles/configMustard_sim_motion.ini
@@ -1,9 +1,9 @@
 modelFile            ../../models/mustard.off
 auxCloud1File	     ../../models/push_contacts_1_mustard.off
 auxCloud2File	     ../../models/push_contacts_2_mustard.off
-modelOutputPath      ../../outputs/mustard/motion/
-measOutputPath       ../../outputs/mustard/motion/
-resultsOutputPath    ../../outputs/mustard/motion/
+modelOutputPath      ../../outputs/mustard/
+measOutputPath       ../../outputs/mustard/
+resultsOutputPath    ../../outputs/mustard/
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    200
@@ -18,3 +18,4 @@ resampleInFirstIters true
 useIdealMeasEqn	     false
 numContacts	     10
 useCenterVelocity    false
+numTrials	     1
