--- a/configurationFiles/configMustard_sim_motion.ini
+++ b/configurationFiles/configMustard_sim_motion.ini
@@ -1,21 +1,23 @@
 modelFile            ../../models/mustard.off
-auxCloud1File	     ../../models/push_contacts_1_mustard.off
-auxCloud2File	     ../../models/push_contacts_2_mustard.off
+auxCloud1File	     ../../models/push_contacts_1.off
+auxCloud2File	     ../../models/push_contacts_2.off
 modelOutputPath      ../../outputs/mustard/
 measOutputPath       ../../outputs/mustard/
 resultsOutputPath    ../../outputs/mustard/
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
-N                    200
+N                    50
 n                    6
 R                    0.0001
-P0                   (0.04, 0.04, 0.04, 9.86, 9.86, 9.86)
+P0                   (0.04, 0.04, 0.04, 3.29, 3.29, 3.29)
+Q0		     (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
 observerOrigin	     (0.2, -0.05, 0.0)
 alpha                1.0
 kappa                0
 beta                 2
-resampleInFirstIters true
+nStepsBefRsmpl	     10
+nEffThr		     10
 useIdealMeasEqn	     false
 numContacts	     10
 useCenterVelocity    false
-numTrials	     1
+numTrials	     50
