remove useless configs and models

--- a/config/configMustard_sim.ini
+++ b/config/configMustard_sim.ini
@@ -1,4 +1,4 @@
-modelFile            ../../models/mustard.off
+modelFile            models/mustard.off
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
