change 'modelFile' and add 'targetFrame' in config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,6 @@
-modelFile            models/mustard.off
+modelFile            models/box.off
 outputPath	     output/
+targetFrame	     /box_alt/estimate/frame
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
