--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,5 @@
 modelFile            models/mustard.off
+outputPath	     output/
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
