add visionQ, tactileQ, visionR, tactileR to the configuration file config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -7,6 +7,10 @@ n                    6
 R                    0.0001
 P0                   (0.04, 0.04, 0.04, 3.29, 3.29, 3.29)
 Q0		     (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
+visionQ		     (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
+tactileQ	     (0.00001, 0.00001, 0.00000001, 0.01, 0.000001, 0.000001)
+visionR		     0.0001
+tactileR	     0.0001
 alpha                1.0
 kappa                0
 beta                 2
