include PointCloud.h header in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,8 @@ set(headers
   headers/geometryCGAL.h
   headers/unscentedParticleFilter.h
   headers/localizer-module.h
-  headers/filterData.h)
+  headers/filterData.h
+  headers/PointCloud.h)
 set(sources
   src/unscentedParticleFilter.cpp
   src/localizer-module.cpp
