add parameters estimateSourceFrame, estimateTargetFrame, robotSourceFrame and robotTargetFrame in config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,9 @@
 modelFile            models/box.off
 outputPath	     output/
-targetFrame	     /box_alt/estimate/frame
+estimateSourceFrame  /iCub/frame
+estimateTargetFrame  /box_alt/estimate/frame
+robotSourceFrame     /inertial
+robotTargetFrame     /iCub/frame
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
