--- a/config/config.ini
+++ b/config/config.ini
@@ -4,6 +4,7 @@ estimateSourceFrame  /iCub/frame
 estimateTargetFrame  /box_alt/estimate/frame
 robotSourceFrame     /inertial
 robotTargetFrame     /iCub/frame
+pointCloudInputPort  /upf-localizer/pc:i
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
