add parameter contactsInputPort to configuration file

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,6 +5,7 @@ estimateTargetFrame  /box_alt/estimate/frame
 robotSourceFrame     /inertial
 robotTargetFrame     /iCub/frame
 pointCloudInputPort  /upf-localizer/pc:i
+contactsInputPort    /upf-localizer/contacts:i
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
