--- a/config/config.ini
+++ b/config/config.ini
@@ -6,6 +6,7 @@ robotSourceFrame     /inertial
 robotTargetFrame     /iCub/frame
 pointCloudInputPort  /upf-localizer/pc:i
 contactsInputPort    /upf-localizer/contacts:i
+period		     0.01
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
