split configuration parameters in two groups 'upf' and 'upf-module' to increase clarity

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,4 @@
-modelFile            models/box.off
+[upf-module]
 outputPath	     output/
 estimateSourceFrame  /iCub/frame
 estimateTargetFrame  /box_alt/estimate/frame
@@ -7,6 +7,13 @@ robotTargetFrame     /iCub/frame
 pointCloudInputPort  /upf-localizer/pc:i
 contactsInputPort    /upf-localizer/contacts:i
 period		     0.01
+visionQ		     (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
+tactileQ	     (0.00001, 0.00001, 0.00000001, 0.01, 0.000001, 0.000001)
+visionR		     0.0001
+tactileR	     0.001
+
+[upf]
+modelFile            models/box.off
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
@@ -14,10 +21,6 @@ n                    6
 R                    0.0001
 P0                   (0.04, 0.04, 0.04, 3.29, 3.29, 3.29)
 Q0		     (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
-visionQ		     (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
-tactileQ	     (0.00001, 0.00001, 0.00000001, 0.01, 0.000001, 0.000001)
-visionR		     0.0001
-tactileR	     0.001
 alpha                0.3
 kappa                0
 beta                 2
