--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,12 +51,12 @@ set(headers
   headers/geometryCGAL.h
   headers/unscentedParticleFilter.h
   headers/localizer-module.h
-  headers/filterCommand.h
+  headers/FilterCommand.h
   headers/PointCloud.h)
 set(sources
   src/unscentedParticleFilter.cpp
   src/localizer-module.cpp
-  src/filterCommand.cpp
+  src/FilterCommand.cpp
   src/main.cpp)
 
 # executable
