add parameter 'simulationMode' to config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,5 @@
 [upf-module]
+simulationMode       true
 outputPath           output/
 estimateSourceFrame  /iCub/frame
 estimateTargetFrame  /box_alt/estimate/frame
