--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,5 @@
 [upf-module]
+robotName            icubSim
 simulationMode       true
 outputPath           output/
 estimateSourceFrame  /iCub/frame
