add parameter 'useAnalogs' to config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,6 @@
 [upf-module]
 robotName            icubSim
+useAnalogs           false
 simulationMode       true
 outputPath           output/
 estimateSourceFrame  /iCub/frame
