add parameter 'filteredPointCloudInputPort' to localizer_config.ini

--- a/config/localizer_config.ini
+++ b/config/localizer_config.ini
@@ -1,19 +1,20 @@
 [upf-module]
-robotName            icubSim
-useAnalogs           false
-simulationMode       true
-outputPath           output/
-estimateSourceFrame  /iCub/frame
-estimateTargetFrame  /box_alt/estimate/frame
-robotSourceFrame     /inertial
-robotTargetFrame     /iCub/frame
-pointCloudInputPort  /upf-localizer/pc:i
-contactsInputPort    /upf-localizer/contacts:i
-period               0.01
-visionQ              (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
-tactileQ             (0.00001, 0.00001, 0.00000001, 0.005, 0.0001, 0.0001)
-visionR              0.0001
-tactileR             0.001
+robotName                    icubSim
+useAnalogs                   false
+simulationMode               true
+outputPath                   output/
+estimateSourceFrame          /iCub/frame
+estimateTargetFrame          /box_alt/estimate/frame
+robotSourceFrame             /inertial
+robotTargetFrame             /iCub/frame
+pointCloudInputPort          /upf-localizer/pc:i
+filteredPointCloudInputPort  /upf-localizer/filtered-pc:i
+contactsInputPort            /upf-localizer/contacts:i
+period                       0.01
+visionQ                      (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
+tactileQ                     (0.00001, 0.00001, 0.00000001, 0.005, 0.0001, 0.0001)
+visionR                      0.0001
+tactileR                     0.001
 
 [upf]
 modelFile            models/box.off
