add parameter 'visualChunkSize' to localizer_config.ini

--- a/config/localizer_config.ini
+++ b/config/localizer_config.ini
@@ -15,6 +15,7 @@ visionQ                      (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
 tactileQ                     (0.00001, 0.00001, 0.00000001, 0.005, 0.0001, 0.0001)
 visionR                      0.0001
 tactileR                     0.001
+visualChunkSize              10
 
 [upf]
 modelFile            models/box.off
