--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,20 +65,25 @@ target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
 # configuration file
-set (confMustard ${PROJECT_SOURCE_DIR}/config/localizer_config.ini)
-yarp_install(FILES ${confMustard} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization)
+set (configSim ${PROJECT_SOURCE_DIR}/config/simulation/localizer_config.ini)
+yarp_install(FILES ${configSim} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization)
+
+set (configSetup ${PROJECT_SOURCE_DIR}/config/setup/localizer_config.ini)
+yarp_install(FILES ${configSetup} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization)
 
 # mesh file for YCB Mustard
 set (meshMustard ${PROJECT_SOURCE_DIR}/models/mustard.off)
 yarp_install(FILES ${meshMustard} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
+yarp_install(FILES ${meshMustard} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/models)
 
 # mesh file for box
 set (meshBox ${PROJECT_SOURCE_DIR}/models/box.off)
 yarp_install(FILES ${meshBox} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
+yarp_install(FILES ${meshBox} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/models)
 
 # output files folder with empty placeholder
-set (outputDraft ${PROJECT_SOURCE_DIR}/output/empty)
-yarp_install(FILES ${outputDraft} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/output)
+# set (outputDraft ${PROJECT_SOURCE_DIR}/output/empty)
+# yarp_install(FILES ${outputDraft} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/output)
 
 # add uninstall target
 icubcontrib_add_uninstall_target()
