fix outputPath in simulation/localizer_config.ini

--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -2,7 +2,7 @@
 robotName                    icubSim
 useAnalogs                   false
 simulationMode               true
-outputPath                   /home/npiga/output
+outputPath                   /home/npiga/output/
 estimateSourceFrame          /iCub/frame
 estimateTargetFrame          /box_alt/estimate/frame
 robotSourceFrame             /inertial
