--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -2,7 +2,7 @@
 robotName                    icub
 useAnalogs                   true
 simulationMode               false
-outputPath                   /home/npiga/output
+outputPath                   /home/npiga/output/
 estimateSourceFrame          /iCub/frame
 estimateTargetFrame          /box_alt/estimate/frame
 robotSourceFrame             /inertial
