change model path in config/setup/localizer_config.ini

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -18,7 +18,7 @@ tactileR                     0.001
 visualChunkSize              10
 
 [upf]
-modelFile            models/box.off
+modelFile            models/book.off
 radius0              (0.4, 0.4, 0.4)
 center0              (-0.0, 0.0, 0.0)
 N                    50
