do not install files related to simulation environment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ include(${CGAL_USE_FILE})
 icubcontrib_set_default_prefix()
 
 # include directories
-include_directories(${YARP_INCLUDE_DIRS})
+include_directories(${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR})
 
 # set headers and sources
@@ -68,24 +68,24 @@ install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
 # configuration file
 set (configSim ${PROJECT_SOURCE_DIR}/config/simulation/localizer_config.ini)
-yarp_install(FILES ${configSim} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization)
+#yarp_install(FILES ${configSim} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization)
 
 set (configSetup ${PROJECT_SOURCE_DIR}/config/setup/localizer_config.ini)
 yarp_install(FILES ${configSetup} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization)
 
 # mesh file for YCB Mustard
 set (meshMustard ${PROJECT_SOURCE_DIR}/models/mustard.off)
-yarp_install(FILES ${meshMustard} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
+#yarp_install(FILES ${meshMustard} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
 yarp_install(FILES ${meshMustard} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/models)
 
 # mesh file for box
 set (meshBox ${PROJECT_SOURCE_DIR}/models/box.off)
-yarp_install(FILES ${meshBox} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
+#yarp_install(FILES ${meshBox} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
 yarp_install(FILES ${meshBox} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/models)
 
 # mesh file for book
 set (meshBook ${PROJECT_SOURCE_DIR}/models/book.off)
-yarp_install(FILES ${meshBook} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
+#yarp_install(FILES ${meshBook} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
 yarp_install(FILES ${meshBook} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/models)
 
 # output files folder with empty placeholder
