update configuration file of real setup

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -2,9 +2,9 @@
 robotName                    icub
 useAnalogs                   true
 simulationMode               false
-outputPath                   /home/npiga/output/
+outputPath                   /home/icub/tmp_nicola/output/
 estimateSourceFrame          /iCub/frame
-estimateTargetFrame          /box_alt/estimate/frame
+estimateTargetFrame          /estimate/frame
 robotSourceFrame             /inertial
 robotTargetFrame             /iCub/frame
 pointCloudInputPort          /upf-localizer/pc:i
