add parameters 'groundTruthSourceFrame' and 'groundTruthTargetFrame' to configuration files config/{simulation,setup}/localizer_config.ini

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -7,6 +7,8 @@ estimateSourceFrame          /iCub/frame
 estimateTargetFrame          /estimate/frame
 robotSourceFrame             /inertial
 robotTargetFrame             /iCub/frame
+groundTruthSourceFrame       /iCub/frame
+groundTruthTargetFrame       /ground_truth/frame
 pointCloudInputPort          /upf-localizer/pc:i
 filteredPointCloudInputPort  /upf-localizer/filtered-pc:i
 contactsInputPort            /upf-localizer/contacts:i
