--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -7,6 +7,8 @@ estimateSourceFrame          /iCub/frame
 estimateTargetFrame          /box_alt/estimate/frame
 robotSourceFrame             /inertial
 robotTargetFrame             /iCub/frame
+groundTruthSourceFrame       /iCub/frame
+groundTruthTargetFrame       /box_alt/frame
 pointCloudInputPort          /upf-localizer/pc:i
 filteredPointCloudInputPort  /upf-localizer/filtered-pc:i
 contactsInputPort            /upf-localizer/contacts:i
