--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -10,6 +10,9 @@ robotTargetFrame             /iCub/frame
 groundTruthSourceFrame       /iCub/frame
 groundTruthTargetFrame       /ground_truth/frame
 pointCloudInputPort          /upf-localizer/pc:i
+pointCloudUniformSample      30
+pointCloudRandomSample       0.9
+pointCloudVisualChunkSize    10
 # filteredPointCloudInputPort  /upf-localizer/filtered-pc:i
 contactsInputPort            /upf-localizer/contacts:i
 period                       0.01
@@ -17,7 +20,6 @@ visionQ                      (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
 tactileQ                     (0.00001, 0.00001, 0.00000001, 0.005, 0.0001, 0.0001)
 visionR                      0.0001
 tactileR                     0.001
-visualChunkSize              10
 
 [upf]
 modelFile            models/rice.off
