--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -12,6 +12,8 @@ groundTruthTargetFrame       /ground_truth/frame
 pointCloudInputPort          /upf-localizer/pc:i
 pointCloudUniformSample      30
 pointCloudRandomSample       0.9
+pointCloudOutlierRadius      0.01
+pointCloudOutlierNeigh       10
 pointCloudVisualChunkSize    10
 # filteredPointCloudInputPort  /upf-localizer/filtered-pc:i
 contactsInputPort            /upf-localizer/contacts:i
