add parameters 'pointCloudSubsample', 'pointCloudShuffle' and 'pointCloudOutlierRemoval' to the configuration file config/setup/localizer_config.ini

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -10,12 +10,19 @@ robotTargetFrame             /iCub/frame
 groundTruthSourceFrame       /iCub/frame
 groundTruthTargetFrame       /ground_truth/frame
 pointCloudInputPort          /upf-localizer/pc:i
+
+pointCloudSubsample          true
 pointCloudUniformSample      30
+
+pointCloudShuffle            true
 pointCloudRandomSample       0.9
+
+pointCloudOutlierRemoval     false
 pointCloudOutlierRadius      0.01
 pointCloudOutlierNeigh       10
+
 pointCloudVisualChunkSize    10
-# filteredPointCloudInputPort  /upf-localizer/filtered-pc:i
+
 contactsInputPort            /upf-localizer/contacts:i
 period                       0.01
 visionQ                      (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
