rename parameter 'pointCloudUniformSample' to 'pointCloudSubsampleNumPoints' and parameter 'pointCloudRandomSample' to 'pointCloudShuffleResFactor' in file config/setup/localizer_config.ini

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -12,10 +12,10 @@ groundTruthTargetFrame       /ground_truth/frame
 pointCloudInputPort          /upf-localizer/pc:i
 
 pointCloudSubsample          true
-pointCloudUniformSample      30
+pointCloudSubsampleNumPoints 30
 
 pointCloudShuffle            true
-pointCloudRandomSample       0.9
+pointCloudShuffleResFactor   0.9
 
 pointCloudOutlierRemoval     false
 pointCloudOutlierRadius      0.01
