--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,13 @@ set (meshRice ${PROJECT_SOURCE_DIR}/models/rice.off)
 yarp_install(FILES ${meshBook} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/models)
 yarp_install(FILES ${meshRice} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/models)
 
+# calibration files for springy fingers
+set (springyFingersCalib ${PROJECT_SOURCE_DIR}/config/springy_finger_calib)
+yarp_install(FILES ${springyFingersCalib}/grasp_model_left.ini DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/springy_fingers_calib)
+yarp_install(FILES ${springyFingersCalib}/grasp_model_right.ini DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/springy_fingers_calib)
+yarp_install(FILES ${springyFingersCalib}/grasp_model_left.ini DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/springy_fingers_calib)
+yarp_install(FILES ${springyFingersCalib}/grasp_model_right.ini DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/visualTactileLocalization/springy_fingers_calib)
+
 # output files folder with empty placeholder
 # set (outputDraft ${PROJECT_SOURCE_DIR}/output/empty)
 # yarp_install(FILES ${outputDraft} DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/simVisualTactileLocalization/output)
