--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -30,6 +30,11 @@ tactileQ                     (0.00001, 0.00001, 0.00000001, 0.005, 0.0001, 0.000
 visionR                      0.0001
 tactileR                     0.001
 
+springyFingersCalibLeft      springy_fingers_calib/grasp_model_left.ini
+springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
+springyFingersThresLeft      (100.0, 100.0, 100.0, 100.0, 100.0)
+springyFingersThresRight     (100.0, 100.0, 100.0, 100.0, 100.0)
+
 [upf]
 modelFile            models/rice.off
 radius0              (0.4, 0.4, 0.4)
