--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -18,6 +18,10 @@ tactileQ                     (0.00001, 0.00001, 0.00000001, 0.005, 0.0001, 0.000
 visionR                      0.0001
 tactileR                     0.001
 visualChunkSize              10
+springyFingersCalibLeft      springy_fingers_calib/grasp_model_left.ini
+springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
+springyFingersThresLeft      (100.0, 100.0, 100.0, 100.0, 100.0)
+springyFingersThresRight     (100.0, 100.0, 100.0, 100.0, 100.0)
 
 [upf]
 modelFile            models/box.off
