add parameter 'useSpringyFingersDetection' to the configuration files of module upf-localizer

--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -22,6 +22,7 @@ springyFingersCalibLeft      springy_fingers_calib/grasp_model_left.ini
 springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
 springyFingersThresLeft      (100.0, 100.0, 100.0, 100.0, 100.0)
 springyFingersThresRight     (100.0, 100.0, 100.0, 100.0, 100.0)
+useSpringyFingersDetection   false
 
 [upf]
 modelFile            models/box.off
