--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -34,6 +34,7 @@ springyFingersCalibLeft      springy_fingers_calib/grasp_model_left.ini
 springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
 springyFingersThresLeft      (100.0, 100.0, 100.0, 100.0, 100.0)
 springyFingersThresRight     (100.0, 100.0, 100.0, 100.0, 100.0)
+useSpringyFingersDetection   false
 
 [upf]
 modelFile            models/rice.off
