add parameter 'useExternalVelocityObserver' in configuration files of module upf-localizer

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -23,6 +23,8 @@ pointCloudOutlierNeigh       10
 
 pointCloudVisualChunkSize    10
 
+useExternalVelocityObserver  true
+
 contactsInputPort            /upf-localizer/contacts:i
 period                       0.01
 visionQ                      (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
