--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -23,6 +23,7 @@ springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
 springyFingersThresLeft      (100.0, 100.0, 100.0, 100.0, 100.0)
 springyFingersThresRight     (100.0, 100.0, 100.0, 100.0, 100.0)
 useSpringyFingersDetection   false
+useExternalVelocityObserver  true
 
 [upf]
 modelFile            models/box.off
