enable dense outliers removal in real setup configuration

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -20,6 +20,8 @@ pointCloudShuffleResFactor   0.9
 pointCloudOutlierRemoval     false
 pointCloudOutlierRadius      0.01
 pointCloudOutlierNeigh       10
+pointCloudDensOutlierRemoval true
+pointCloudDensOutlierThr     0.3
 
 pointCloudVisualChunkSize    10
 
