--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -36,9 +36,9 @@ tactileR                     0.001
 
 springyFingersCalibLeft      springy_fingers_calib/grasp_model_left.ini
 springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
-springyFingersThresLeft      (100.0, 50.0, 100.0, 100.0, 100.0)
-springyFingersThresRight     (100.0, 50.0, 100.0, 100.0, 100.0)
-useSpringyFingersDetection   false
+springyFingersThresLeft      (1000.0, 50.0, 100.0, 100.0, 100.0)
+springyFingersThresRight     (1000.0, 50.0, 100.0, 100.0, 100.0)
+useSpringyFingersDetection   true
 
 [upf]
 modelFile            models/rice.off
