add parameter 'useAnalogsBounds' to setup configuration file

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -1,6 +1,7 @@
 [upf-module]
 robotName                    icub
 useAnalogs                   true
+useAnalogsBounds             true
 simulationMode               false
 outputPath                   /home/icub/tmp_nicola/output/
 estimateSourceFrame          /iCub/frame
