add parameters 'excludedFingers' to setup configuration file

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -28,6 +28,8 @@ pointCloudVisualChunkSize    10
 
 useExternalVelocityObserver  true
 
+excludedFingers              ("thumb")
+
 contactsInputPort            /upf-localizer/contacts:i
 period                       0.01
 visionQ                      (0.0001, 0.0001, 0.0001, 0.01, 0.01, 0.01)
