add parameters 'excludedFingers' to simulation configuration file

--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -24,6 +24,7 @@ springyFingersThresLeft      (100.0, 100.0, 100.0, 100.0, 100.0)
 springyFingersThresRight     (100.0, 100.0, 100.0, 100.0, 100.0)
 useSpringyFingersDetection   false
 useExternalVelocityObserver  false
+excludedFingers              ()
 
 [upf]
 modelFile            models/box.off
