add parameters 'auxEstimateSourceFrame' and 'auxEstimateTargetFrame' in simulation and setup configuration files of module upf-localizer

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -6,6 +6,8 @@ simulationMode               false
 outputPath                   /home/icub/tmp_nicola/output/
 estimateSourceFrame          /iCub/frame
 estimateTargetFrame          /estimate/frame
+auxEstimateSourceFrame       /iCub/frame
+auxEstimateTargetFrame       /estimate/aux/frame
 robotSourceFrame             /inertial
 robotTargetFrame             /iCub/frame
 groundTruthSourceFrame       /iCub/frame
