--- a/config/simulation/localizer_config.ini
+++ b/config/simulation/localizer_config.ini
@@ -5,6 +5,8 @@ simulationMode               true
 outputPath                   /home/npiga/output/
 estimateSourceFrame          /iCub/frame
 estimateTargetFrame          /box_alt/estimate/frame
+auxEstimateSourceFrame       /iCub/frame
+auxEstimateTargetFrame       /box_alt/estimate/aux/frame
 robotSourceFrame             /inertial
 robotTargetFrame             /iCub/frame
 groundTruthSourceFrame       /iCub/frame
