add parameter to enable/disable kalman correction step

--- a/config/setup/localizer_config.ini
+++ b/config/setup/localizer_config.ini
@@ -44,6 +44,7 @@ springyFingersCalibRight     springy_fingers_calib/grasp_model_right.ini
 springyFingersThresLeft      (1000.0, 50.0, 100.0, 100.0, 100.0)
 springyFingersThresRight     (1000.0, 50.0, 100.0, 100.0, 100.0)
 useSpringyFingersDetection   true
+skipCorrection               false
 
 [upf]
 modelFile            models/rice.off
