Add iCubGazeCtrlLibrary to src/object-tracking/CMakeLists.txt

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -68,6 +68,7 @@ target_link_libraries(${EXE_TARGET_NAME}
                       # YARP::YARP_init
                       SFMLib
                       stereoVision
+                      iCubGazeCtrlLibrary
                       )
 if(NOT TARGET Eigen3)
     target_include_directories(${EXE_TARGET_NAME}
